<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 選擇收入或支出 -->
    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category_array" />

    <!-- 收入按鈕容器 -->
    <GridLayout
        android:id="@+id/incomeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:padding="8dp"
        android:visibility="invisible">


        <Button
            android:id="@+id/btnSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_salary" />

        <Button
            android:id="@+id/btnBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_bonus" />

        <Button
            android:id="@+id/btnInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_interest" />

        <Button
            android:id="@+id/btnGift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_gift" />

        <Button
            android:id="@+id/btnAllowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_allowance" />

        <Button
            android:id="@+id/btninOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_income_other" />
    </GridLayout>

    <!-- 支出按鈕容器 -->
    <GridLayout
        android:id="@+id/expenseButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:padding="8dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btnFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_food" />

        <Button
            android:id="@+id/btnHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_household" />

        <Button
            android:id="@+id/btnClothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_clothing" />

        <Button
            android:id="@+id/btnTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_travel" />

        <Button
            android:id="@+id/btnInvestment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_investment" />

        <Button
            android:id="@+id/btnoutOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/botton_color"
            android:textColor="@color/text_color"
            android:text="@string/btn_expense_other" />
    </GridLayout>


    <!-- 輸入金額 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/amount"
            android:layout_marginVertical="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/remarks"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/edtInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/remarks_hint"
            android:inputType="textPersonName" />
    </LinearLayout>

    <!-- 確認按鈕 -->

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <!-- 清單 -->
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <!-- 顯示平衡 -->

    <TextView
        android:id="@+id/txvTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <!-- 顯示總收入 -->
    <TextView
        android:id="@+id/txvTotalIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_income"
        android:textColor="#2D9E37"
        android:textColorLink="#52FF2B"
        android:textSize="18sp" />

    <!-- 顯示總支出 -->
    <TextView
        android:id="@+id/txvTotalExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_expense"
        android:textColor="#B42828"
        android:textSize="18sp" />

</LinearLayout>
